@startuml

title __BEAN's Class Diagram__\n

  namespace zuke.com.qxapp {
    namespace Bean {
      class zuke.com.qxapp.Bean.Community {
          - info : String
          - isrelated : String
          - name : String
          - owner : String
          - relation : BmobRelation
          + getInfo()
          + getIsrelated()
          + getName()
          + getOwner()
          + getRelation()
          + getUser()
          + setInfo()
          + setIsrelated()
          + setName()
          + setOwner()
          + setRelation()
          + setUser()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Bean {
      class zuke.com.qxapp.Bean.Post {
          - content : String
          - isrelated : String
          - name : String
          - nickname : String
          - relation : BmobRelation
          - title : String
          - userOnlyId : String
          + getAuthor()
          + getContent()
          + getIsrelated()
          + getName()
          + getNickname()
          + getRelation()
          + getTitle()
          + getUserOnlyId()
          + setAuthor()
          + setContent()
          + setIsrelated()
          + setName()
          + setNickname()
          + setRelation()
          + setTitle()
          + setUserOnlyId()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Bean {
      class zuke.com.qxapp.Bean.User {
          - focuId : BmobRelation
          - focusId_sum : Integer
          - gender : String
          - nickname : String
          + getFocuId()
          + getFocusId_sum()
          + getGender()
          + getNickname()
          + setFocuId()
          + setFocusId_sum()
          + setGender()
          + setNickname()
      }
    }
  }
  

  zuke.com.qxapp.Bean.Community -up-|> cn.bmob.v3.BmobObject
  zuke.com.qxapp.Bean.Community o-- zuke.com.qxapp.Bean.User : user
  zuke.com.qxapp.Bean.Post -up-|> cn.bmob.v3.BmobObject
  zuke.com.qxapp.Bean.Post o-- zuke.com.qxapp.Bean.User : author
  zuke.com.qxapp.Bean.User -up-|> cn.bmob.v3.BmobUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
